ready for fusing operations

--- a/test/dense/view_dense.ipynb
+++ b/test/dense/view_dense.ipynb
@@ -25,16 +25,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.8/dist-packages/xgboost/compat.py:36: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
-      "  from pandas import MultiIndex, Int64Index\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# fix up a missing point\n",
     "# bs = TVMDynamicBlockEvaluator(672, 7, 16, \"log/c672_w7_g16\", 40)\n",
@@ -44,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,44 +57,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_30249/2097985990.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_14743/2098971409.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(r_, ignore_index=True)\n",
-      "/tmp/ipykernel_30249/2097985990.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_14743/2098971409.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(r_, ignore_index=True)\n",
-      "/tmp/ipykernel_30249/2097985990.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_14743/2098971409.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(r_, ignore_index=True)\n",
-      "/tmp/ipykernel_30249/2097985990.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_14743/2098971409.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(r_, ignore_index=True)\n",
-      "/tmp/ipykernel_30249/2097985990.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_14743/2098971409.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(r_, ignore_index=True)\n",
-      "/tmp/ipykernel_30249/2097985990.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_14743/2098971409.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(r_, ignore_index=True)\n",
-      "/tmp/ipykernel_30249/2097985990.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_14743/2098971409.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(r_, ignore_index=True)\n",
-      "/tmp/ipykernel_30249/2097985990.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_14743/2098971409.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(r_, ignore_index=True)\n",
-      "/tmp/ipykernel_30249/2097985990.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_14743/2098971409.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(r_, ignore_index=True)\n",
-      "/tmp/ipykernel_30249/2097985990.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_14743/2098971409.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(r_, ignore_index=True)\n",
-      "/tmp/ipykernel_30249/2097985990.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_14743/2098971409.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(r_, ignore_index=True)\n",
-      "/tmp/ipykernel_30249/2097985990.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_14743/2098971409.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(r_, ignore_index=True)\n",
-      "/tmp/ipykernel_30249/2097985990.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_14743/2098971409.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(r_, ignore_index=True)\n",
-      "/tmp/ipykernel_30249/2097985990.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_14743/2098971409.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(r_, ignore_index=True)\n",
-      "/tmp/ipykernel_30249/2097985990.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_14743/2098971409.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(r_, ignore_index=True)\n",
-      "/tmp/ipykernel_30249/2097985990.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_14743/2098971409.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = df.append(r_, ignore_index=True)\n",
+      "/tmp/ipykernel_14743/2098971409.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = df.append(r_, ignore_index=True)\n",
+      "/tmp/ipykernel_14743/2098971409.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = df.append(r_, ignore_index=True)\n",
+      "/tmp/ipykernel_14743/2098971409.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = df.append(r_, ignore_index=True)\n",
+      "/tmp/ipykernel_14743/2098971409.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = df.append(r_, ignore_index=True)\n",
+      "/tmp/ipykernel_14743/2098971409.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = df.append(r_, ignore_index=True)\n",
+      "/tmp/ipykernel_14743/2098971409.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = df.append(r_, ignore_index=True)\n",
+      "/tmp/ipykernel_14743/2098971409.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = df.append(r_, ignore_index=True)\n",
+      "/tmp/ipykernel_14743/2098971409.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = df.append(r_, ignore_index=True)\n",
+      "/tmp/ipykernel_14743/2098971409.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = df.append(r_, ignore_index=True)\n",
+      "/tmp/ipykernel_14743/2098971409.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = df.append(r_, ignore_index=True)\n",
+      "/tmp/ipykernel_14743/2098971409.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = df.append(r_, ignore_index=True)\n",
+      "/tmp/ipykernel_14743/2098971409.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = df.append(r_, ignore_index=True)\n",
+      "/tmp/ipykernel_14743/2098971409.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = df.append(r_, ignore_index=True)\n",
+      "/tmp/ipykernel_14743/2098971409.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = df.append(r_, ignore_index=True)\n",
+      "/tmp/ipykernel_14743/2098971409.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(r_, ignore_index=True)\n"
      ]
     },
@@ -112,22 +133,46 @@
      "output_type": "stream",
      "text": [
       "   maskconv1     conv1     conv2       add channel width group\n",
-      "0   0.000008  0.000005  0.000028  0.002675    24.0  56.0   8.0\n",
-      "1   0.000063   0.00001  0.000042  0.002518    56.0  28.0   8.0\n",
-      "2   0.000028  0.000044  0.000086  0.002495   152.0  14.0   8.0\n",
-      "3   0.000074  0.000028  0.000765  0.002457   368.0   7.0   8.0\n",
-      "4   0.000029   0.00001  0.000043  0.002756    32.0  56.0  16.0\n",
-      "5   0.000071  0.000016  0.000043  0.002547    64.0  28.0  16.0\n",
-      "6   0.000049  0.000042  0.000175  0.002517   160.0  14.0  16.0\n",
-      "7   0.000054  0.000058  0.001597  0.002246   384.0   7.0  16.0\n",
-      "8   0.000088  0.000016  0.000332   0.00291    48.0  56.0  24.0\n",
-      "9   0.000019  0.000009  0.000736  0.002281    96.0  28.0  24.0\n",
-      "10  0.000029  0.000036  0.000501  0.002248   240.0  14.0  24.0\n",
-      "11  0.000152  0.000138  0.007572  0.002258   528.0   7.0  24.0\n",
-      "12  0.000196  0.000041  0.003048  0.002773    64.0  56.0  16.0\n",
-      "13  0.000053  0.000033   0.00007  0.002309   128.0  28.0  16.0\n",
-      "14  0.000022  0.000071  0.000614  0.002295   288.0  14.0  16.0\n",
-      "15  0.000298  0.002363  0.000988  0.002309   672.0   7.0  16.0\n"
+      "0   0.000008  0.000005  0.027644  0.000003    24.0  56.0   8.0\n",
+      "1   0.000063   0.00001  0.041865  0.000003    56.0  28.0   8.0\n",
+      "2   0.000028  0.000044  0.085869  0.000002   152.0  14.0   8.0\n",
+      "3   0.000074  0.000028  0.765456  0.000002   368.0   7.0   8.0\n",
+      "4   0.000029   0.00001  0.042948  0.000003    32.0  56.0  16.0\n",
+      "5   0.000071  0.000016  0.043368  0.000003    64.0  28.0  16.0\n",
+      "6   0.000049  0.000042  0.175319  0.000003   160.0  14.0  16.0\n",
+      "7   0.000054  0.000058   1.59664  0.000002   384.0   7.0  16.0\n",
+      "8   0.000088  0.000016  0.332042  0.000003    48.0  56.0  24.0\n",
+      "9   0.000019  0.000009  0.736467  0.000002    96.0  28.0  24.0\n",
+      "10  0.000029  0.000036  0.501224  0.000002   240.0  14.0  24.0\n",
+      "11  0.000152  0.000138  7.572401  0.000002   528.0   7.0  24.0\n",
+      "12  0.000196  0.000041    3.0479  0.000003    64.0  56.0  16.0\n",
+      "13  0.000053  0.000033  0.070424  0.000002   128.0  28.0  16.0\n",
+      "14  0.000022  0.000071  0.613675  0.000002   288.0  14.0  16.0\n",
+      "15  0.000298  0.002363  0.987784  0.000002   672.0   7.0  16.0\n",
+      "16       NaN  0.000005  0.006186  0.000003    24.0  56.0   8.0\n",
+      "17       NaN   0.00001  0.004221  0.000003    56.0  28.0   8.0\n",
+      "18       NaN  0.000044  0.004195  0.000003   152.0  14.0   8.0\n",
+      "19       NaN  0.000028  0.004006  0.000003   368.0   7.0   8.0\n",
+      "20       NaN   0.00001  0.009415  0.000003    32.0  56.0  16.0\n",
+      "21       NaN  0.000016  0.006856  0.000003    64.0  28.0  16.0\n",
+      "22       NaN  0.000042  0.005168  0.000003   160.0  14.0  16.0\n",
+      "23       NaN  0.000058  0.004188  0.000003   384.0   7.0  16.0\n",
+      "24       NaN  0.000019  0.015637  0.000003    48.0  56.0  24.0\n",
+      "25       NaN  0.000011  0.008664  0.000003    96.0  28.0  24.0\n",
+      "26       NaN  0.000042  0.007866  0.000003   240.0  14.0  24.0\n",
+      "27       NaN   0.00016  0.006424  0.000003   528.0   7.0  24.0\n",
+      "28       NaN  0.000048  0.012003  0.000003    64.0  56.0  16.0\n",
+      "29       NaN  0.000039  0.008003  0.000003   128.0  28.0  16.0\n",
+      "30       NaN  0.000084  0.007162  0.000003   288.0  14.0  16.0\n",
+      "31       NaN  0.002759  0.004824  0.000003   672.0   7.0  16.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_14743/2098971409.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = df.append(r_, ignore_index=True)\n"
      ]
     }
    ],
@@ -139,7 +184,7 @@
     "df = pd.DataFrame(columns=list(rr[0].keys()))\n",
     "for r in rr:\n",
     "    r_ = {k: v for k, v in r.items()}  \n",
-    "    for m in [\"add\"]:\n",
+    "    for m in [\"conv2\"]:\n",
     "        r_[m] *= 1000 # in ms\n",
     "    df = df.append(r_, ignore_index=True)\n",
     "print(df)\n",
